# mem_driver

./: .gitignore  CMakeLists.txt  README.md  learn_win_driver.sln  release.ps1
driver/: MemAttribDriver.vcxproj  MemAttribDriver.vcxproj.filters  memattrib.inf  memattrib_driver.c
scripts/: enable-test-mode.ps1  load-driver.ps1  sign-driver.ps1
shared/: memattrib_shared.h
user/: CMakeLists.txt  main.cpp  segment_demo.c
